--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 /* Images created by: https://unsplash.com/@pawel_czerwinski */
 
+@import url("https://fonts.googleapis.com/css2?family=Spartan:wght@400;700&display=swap");
+
 html {
   box-sizing: border-box;
 }
@@ -11,6 +13,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  font-family: Spartan, sans-serif;
   font-size: 12px;
 }
 
