--- a/style.css
+++ b/style.css
@@ -17,6 +17,11 @@ body {
   font-size: 12px;
 }
 
+.player-container {
+  height: 500px;
+  width: 400px;
+}
+
 .img-container {
   position: relative;
   top: -50px;
