added 3D effect to player container

--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body {
   width: 400px;
   background: #e7e7e7;
   border-radius: 20px;
+  box-shadow: 0 15px 30px 5px rgba(0, 0, 0, 0.3);
 }
 
 .img-container {
