--- a/style.css
+++ b/style.css
@@ -34,6 +34,11 @@ body {
   left: 50px;
 }
 
+.img-container img {
+  height: 100%;
+  width: 100%;
+}
+
 h2 {
   font-size: 25px;
   text-align: center;
