added rounded corners and 3D effect to the image itself

--- a/style.css
+++ b/style.css
@@ -37,6 +37,9 @@ body {
 .img-container img {
   height: 100%;
   width: 100%;
+  object-fit: cover;
+  border-radius: 20px;
+  box-shadow: 0 5px 30px 5px rgba(0, 0, 0, 0.3);
 }
 
 h2 {
