--- a/style.css
+++ b/style.css
@@ -93,6 +93,8 @@ h3 {
   font-size: 30px;
   color: rgb(129, 129, 129);
   margin-right: 30px;
+  cursor: pointer;
+  user-select: none;
 }
 
 .main-button {
