--- a/style.css
+++ b/style.css
@@ -97,6 +97,10 @@ h3 {
   user-select: none;
 }
 
+.fas:hover {
+  filter: brightness(80%);
+}
+
 .main-button {
   font-size: 40px;
   position: relative;
