--- a/style.css
+++ b/style.css
@@ -108,7 +108,7 @@ h3 {
   top: 3px;
 }
 
-/* Define the slider width so that it scales properly */
+/* Volume slider container */
 .slider_container {
   width: 100%;
   max-width: 400px;
@@ -119,7 +119,6 @@ h3 {
 }
 
 /* Modify the appearance of the slider */
-.seek_slider,
 .volume_slider {
   -webkit-appearance: none;
   -moz-appearance: none;
@@ -132,7 +131,6 @@ h3 {
 }
 
 /* Modify the appearance of the slider thumb */
-.seek_slider::-webkit-slider-thumb,
 .volume_slider::-webkit-slider-thumb {
   -webkit-appearance: none;
   -moz-appearance: none;
@@ -145,13 +143,8 @@ h3 {
 }
 
 /* Change the opacity when mouse is hovered */
-.seek_slider:hover,
 .volume_slider:hover {
   opacity: 1;
-}
-
-.seek_slider {
-  width: 60%;
 }
 
 .volume_slider {
