gave the volume container a width

--- a/style.css
+++ b/style.css
@@ -147,8 +147,8 @@ h3 {
   opacity: 1;
 }
 
-.volume_slider {
-  width: 30%;
+.volume-container {
+  width: 70%;
 }
 
 /* Media Query: iPhone (Vertical) */
