--- a/style.css
+++ b/style.css
@@ -155,6 +155,41 @@ h3 {
   width: 70%;
 }
 
+/* Music list */
+.list-column {
+  flex: 35%;
+  /* margin-top: 2rem; */
+  background-color: #e7e7e7;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.list-border {
+  border: 2px solid #cec9c9;
+  border-radius: 10px;
+  box-shadow: 1px 1px 2px var(--main-txt-color);
+  max-height: 92%;
+  overflow: auto;
+}
+
+.list-column .list-items {
+  text-transform: capitalize;
+  font-weight: strong;
+  width: 400px;
+  color: var(--main-txt-color);
+  border-bottom: 1px solid #cec9c9;
+  display: flex;
+  /* flex-direction: column; */
+  justify-content: space-between;
+  align-items: center;
+}
+
+.list-items img {
+  width: 20px;
+}
+
 /* Media Query: iPhone (Vertical) */
 @media screen and (max-width: 376px) {
   .player-container {
