--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body {
   border-radius: 20px;
   box-shadow: 0 15px 30px 5px rgba(0, 0, 0, 0.3);
   padding-bottom: 40px;
+  position: relative;
 }
 
 .img-container {
@@ -159,11 +160,13 @@ h3 {
 .list-border {
   border: 2px solid #cec9c9;
   border-radius: 10px;
-  box-shadow: 1px 1px 2px rgba(212, 208, 208, 0.829);
+  box-shadow: 1px 0px 0px 1px rgba(212, 208, 208, 0.829);
   max-height: 100px;
   overflow-y: auto;
   background-color: #e7e7e7;
   width: 400px;
+  position: absolute;
+  bottom: 5%;
 }
 
 .list-items {
