--- a/style.css
+++ b/style.css
@@ -164,7 +164,7 @@ h3 {
   max-height: 100px;
   overflow-y: auto;
   background-color: #e7e7e7;
-  width: 350px;
+  width: 100%;
   margin: 0 auto;
   position: absolute;
   bottom: 70%;
