--- a/style.css
+++ b/style.css
@@ -157,17 +157,24 @@ h3 {
 }
 
 /* Music list */
+.list-container {
+  max-height: 300px;
+  width: 100%;
+  margin: 0 auto;
+  position: absolute;
+  bottom: 22%;
+}
+
 .list-border {
   border: 1px solid #cec9c9;
   border-radius: 10px;
   box-shadow: 1px 0px 0px 1px rgba(212, 208, 208, 0.829);
-  max-height: 100px;
-  overflow-y: auto;
+  max-height: 300px;
   background-color: #e7e7e7;
-  width: 100%;
-  margin: 0 auto;
-  position: absolute;
-  bottom: 70%;
+  width: 90%;
+  margin: auto;
+  /* max-height: 100%; */
+  overflow-y: auto;
 }
 
 .list-border::-webkit-scrollbar {
@@ -186,6 +193,7 @@ h3 {
   justify-content: space-between;
   padding-left: 20px;
   padding-right: 20px;
+  cursor: pointer;
   align-items: center;
 }
 
