--- a/style.css
+++ b/style.css
@@ -170,7 +170,7 @@ h3 {
   border-radius: 10px;
   box-shadow: 1px 0px 0px 1px rgba(212, 208, 208, 0.829);
   max-height: 300px;
-  background-color: #e7e7e7;
+  background-color: rgba(231, 231, 231, 0.8);
   width: 90%;
   margin: auto;
   /* max-height: 100%; */
